--- a/crudBlazor.Web/Components/Layout/MainLayout.razor
+++ b/crudBlazor.Web/Components/Layout/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 @using Blazored.Toast.Configuration
+@using Microsoft.AspNetCore.Components.Authorization
+@using crudBlazor.Web.Components.Authentication
+@inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager Navigation
 
 <div class="page">
     <div class="sidebar">
@@ -8,7 +12,15 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+                    <div>Hello, @context.User.Identity?.Name!</div>
+                </Authorized>
+                <NotAuthorized>
+                    <div>You're not authorized.</div>
+                </NotAuthorized>
+            </AuthorizeView>
+            <a href="/logout">LogOut</a>
         </div>
 
         <article class="content px-4">
@@ -17,15 +29,30 @@
     </main>
 </div>
 
-<BlazoredToasts Position="ToastPosition.TopRight"
-                    Timeout="10"
-                    IconType="IconType.FontAwesome"
-                    SuccessClass="success-toast-override"
-                    SuccessIcon="fa fa-thumbs-up"
-                    ErrorIcon="fa fa-bug" />
+<BlazoredToasts Position="ToastPosition.TopRight" Timeout="10" IconType="IconType.FontAwesome"
+    SuccessClass="success-toast-override" SuccessIcon="fa fa-thumbs-up" ErrorIcon="fa fa-bug" />
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code{
+    public bool IsShowContent { get; set; }
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await ((CustomAuthStateProvider)AuthStateProvider).GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (!user.Identity.IsAuthenticated)
+        {
+            Navigation.NavigateTo("/login");
+        }
+        else
+        {
+            IsShowContent = true;
+        }
+
+    }
+}
