--- a/crudBlazor.Web/Components/Pages/Product/IndexProduct.razor
+++ b/crudBlazor.Web/Components/Pages/Product/IndexProduct.razor
@@ -1,6 +1,9 @@
 @page "/product"
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@attribute [Authorize(Roles = "Admin,User")]
 
-<h2>IndexProduct</h2>
+<h3>IndexProduct</h3>
 
 @if (ProductModels == null)
 {
@@ -20,30 +23,39 @@ else
                 <th>Action</th>
             </tr>
         </thead>
-        @foreach (var product in ProductModels)
-        {
-            <tr>
-                <td>@product.ProductName</td>
-                <td>@product.Quantity</td>
-                <td>@product.Price</td>
-                <td>@product.Description</td>
-                <td>@product.CreateAt.ToShortDateString()</td>
-                <td>
-                    <a class="btn btn-primary" href="/product/update/@product.ID">Update</a>
-                    <button class="btn btn-danger" @onclick="()=> { DeleteID = product.ID; Modal?.Open();}">Delete</button>
-                </td>
-            </tr>
-        }
+        <tbody>
+            @foreach (var product in ProductModels)
+            {
+                <tr>
+                    <td>@product.ProductName</td>
+                    <td>@product.Quantity</td>
+                    <td>@product.Price</td>
+                    <td>@product.Description</td>
+                    <td>@product.CreateAt.ToShortDateString()</td>
+                    <td>
+                        <a class="btn btn-secondary" href="/product/update/@product.ID">Update</a>
+                        <AuthorizeView Roles="Admin">
+                            <Authorized>
+                                <button class="btn btn-danger"
+                                    @onclick="()=> { DeleteID = product.ID; Modal.Open();}">Delete</button>
+                            </Authorized>
+                        </AuthorizeView>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
 
     <AppModal @ref="Modal">
         <Title>Notification</Title>
+
         <Body>
             Do you sure want to delete this product?
         </Body>
         <Footer>
             <button type="button" class="btn btn-primary" style="width:80px" @onclick="HandleDelete">Yes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => Modal?.Close()">Cancel</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                @onclick="() => Modal.Close()">Cancel</button>
         </Footer>
     </AppModal>
 }
